--- a/app/css/center.css
+++ b/app/css/center.css
@@ -3,15 +3,33 @@
 
 body { background: #f1f5f6; font-size: 14px; font-family: "微软雅黑"; }
 
-.header { font-size: 16px; }
+a { text-decoration: none; }
 
-#pageMine .photo { width: 100vw; height: 15vh; margin-left: -15px; margin-top: 2vh; background: url(../img/nav_bg.jpg) repeat-x; background-size: cover; }
+header { display: flex; position: fixed; z-index: 10; top: 0; left: 0; width: 100%; background: #8e488e; padding: 15px 0; color: #fff; font-size: 16px; font-weight: 600; justify-content: center; align-items: center; }
+
+header a { flex: 1; text-align: left; margin-left: 10px; text-decoration: none; color: #fff; }
+
+header span:nth-child(2) { flex: 4; text-align: center; }
+
+header span:last-child { position: relative; flex: 1; margin-right: 10px; text-align: right; }
+
+header span:last-child .caidan { position: absolute; top: 30px; right: 0; display: none; }
+
+header span:last-child .caidan ul { list-style: none; border-radius: 5px; background: #666; margin: 0; padding: 0; }
+
+header span:last-child .caidan ul li { opacity: 0.9; }
+
+header span:last-child .caidan ul li a { display: block; font-weight: normal; text-decoration: none; font-size: 12px; text-align: center; width: 120px; padding: 10px 0; color: #fff; }
+
+header span:last-child .caidan ul:before { content: ''; display: inline-block; position: absolute; right: 5px; top: -16px; width: 0; height: 0; border: 10px solid transparent; border-bottom: 8px solid #666; }
+
+#pageMine .photo { width: 100vw; height: 15vh; margin-left: -15px; margin-top: 4vh; background: url(../img/nav_bg.jpg) repeat-x; background-size: cover; }
 
 #pageMine .photo ul { width: 100%; height: 100%; }
 
 #pageMine .photo ul li { width: 100%; height: 100%; }
 
-#pageMine .photo .people_pic { width: 50px; height: 50px; margin-top: 25px; }
+#pageMine .photo .people_pic { width: 50px; height: 50px; margin-top: 30px; }
 
 #pageMine .photo .people_pic img { width: 50px; height: 50px; border-radius: 115px; margin-left: 15px; }
 
@@ -35,10 +53,10 @@ body { background: #f1f5f6; font-size: 14px; font-family: "微软雅黑"; }
 
 #pageMine .vipgrade #vipgrade a { width: 100%; height: 100%; }
 
-#pageMine .vipgrade #vipgrade a .badge { background: #8e488e; color: #fff; margin-top: 10px; }
+#pageMine .vipgrade #vipgrade a .badge { background: #8e488e; color: #fff; }
 
 #pageMine .myindent { width: 100vw; margin-bottom: 8vh; margin-left: -15px; margin-top: -25px; }
 
 #pageMine .myindent #myindent { width: 100%; height: 100%; }
 
-#pageMine .myindent #myindent .badge { background: #fff; color: #333; margin-top: 10px; }
+#pageMine .myindent #myindent .badge { background: #fff; color: #333; }
