--- a/app/css/index.css
+++ b/app/css/index.css
@@ -5,11 +5,13 @@ body { font-family: "微软雅黑"; font-size: 14px; }
 
 ul { list-style: none; }
 
+a { text-decoration: none; }
+
 .box { width: 100vw; }
 
-.box .header { width: 100vw; height: 7vh; text-align: center; line-height: 7vh; color: #fff; background: #8e488e; position: fixed; top: 0; left: 0; z-index: 50; }
+.box .header { width: 100vw; height: 8vh; text-align: center; line-height: 8vh; color: #fff; background: #8e488e; position: fixed; top: 0; left: 0; z-index: 50; }
 
-.box .header .search { margin-left: 80vw; margin-top: -7vh; }
+.box .header .search { margin-left: 80vw; margin-top: -8vh; }
 
 .box .banner { width: 100vw; height: auto; background: #f1f5f6; margin-top: 40px; }
 
@@ -29,7 +31,7 @@ ul { list-style: none; }
 
 .box .banner .datalist1 ul { width: 100%; height: 100%; display: flex; flex-flow: row wrap; }
 
-.box .banner .datalist1 ul li { height: 15vh; flex: 1 1 45%; margin: 3px; }
+.box .banner .datalist1 ul li { height: 20vh; flex: 1 1 45%; margin: 3px; }
 
 .box .banner .datalist1 ul li img { width: 100%; height: 100%; }
 
@@ -37,7 +39,7 @@ ul { list-style: none; }
 
 .box .banner .datalist2 ul { width: 100%; height: 100%; display: flex; flex-flow: row wrap; }
 
-.box .banner .datalist2 ul li { height: 20vh; flex: 1 1 100%; margin: 3px; }
+.box .banner .datalist2 ul li { height: 30vh; flex: 1 1 100%; margin: 3px; }
 
 .box .banner .datalist2 ul li img { width: 100%; height: 100%; }
 
