--- a/app/iconfont/iconfont.css
+++ b/app/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1477902052481'); /* IE9*/
-  src: url('iconfont.eot?t=1477902052481#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1477902052481') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1477902052481') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1477902052481#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1478141513248'); /* IE9*/
+  src: url('iconfont.eot?t=1478141513248#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1478141513248') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1478141513248') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1478141513248#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -15,6 +15,8 @@
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.icon-sousuo:before { content: "\f004c"; }
 
 .icon-liebiao:before { content: "\e605"; }
 
@@ -27,6 +29,8 @@
 .icon-jifen:before { content: "\e654"; }
 
 .icon-gerenzhongxin:before { content: "\e65a"; }
+
+.icon-fanhuidingbu:before { content: "\e61c"; }
 
 .icon-shouye:before { content: "\e61f"; }
 
