--- a/app/sass/center.scss
+++ b/app/sass/center.scss
@@ -1,11 +1,83 @@
 *{list-style: none;margin: 0;padding: 0;text-decoration: none;}
 body{background: #f1f5f6; font-size: 14px; font-family: "微软雅黑";}
+a{text-decoration: none;}
 
-.header{font-size: 16px;}
-
+ //头部
+    header{
+//     width: 100vw; height: 7vh;text-align: center;line-height: 7vh;color: #fff; background: #8e488e;
+        display: flex;
+        position: fixed;
+         z-index: 10;
+        top:0;
+        left: 0;
+        width: 100%;
+         background:#8e488e;
+         padding: 15px 0;
+         color: #fff;
+         font-size: 16px;
+         font-weight: 600;
+         justify-content: center;
+         align-items: center;
+         a{
+             flex: 1;
+             text-align:left;
+             margin-left: 10px;
+             text-decoration: none;
+             color: #fff;
+         }
+         span:nth-child(2){
+             flex: 4;
+             text-align: center;
+             
+         }
+        span:last-child{
+            position: relative;
+            flex: 1;
+            margin-right: 10px;
+            text-align: right;
+            .caidan{
+                position: absolute;
+                top:30px;
+                right:0;
+                display: none;
+                ul{
+                    list-style: none;
+                    border-radius: 5px;
+                     background: #666;
+                    margin: 0;
+                    padding: 0;
+                     li{
+                        opacity: 0.9;
+                        a{
+                            display: block;
+                            font-weight: normal;
+                            text-decoration: none;
+                            font-size: 12px;
+                            text-align: center;
+                            width: 120px;
+                            padding: 10px 0;
+                            color: #fff;
+                        }
+                    }
+                    &:before{
+                        content: '';
+                        display:inline-block;
+                        position: absolute;
+                        right: 5px;
+                        top:-16px;
+                        width: 0;
+                        height: 0;
+                        border: 10px solid transparent;
+                        border-bottom:8px solid #666;
+                    }
+                }
+            
+            }
+        }
+    }
 //头像号码
 #pageMine .photo{
-    width: 100vw;height: 15vh;margin-left: -15px;margin-top: 2vh;
+    width: 100vw;height: 15vh;margin-left: -15px;margin-top: 4vh;
     background: url(../img/nav_bg.jpg) repeat-x;background-size: cover;
     ul{
         width: 100%;height: 100%;
@@ -14,7 +86,7 @@ body{background: #f1f5f6; font-size: 14px; font-family: "微软雅黑";}
         }
     }
     .people_pic{
-        width: 50px;height:50px;margin-top: 25px;
+        width: 50px;height:50px;margin-top: 30px;
         img{
             width: 50px;height:50px;border-radius: 115px;margin-left: 15px;
         }
@@ -62,7 +134,7 @@ body{background: #f1f5f6; font-size: 14px; font-family: "微软雅黑";}
             .badge{
                 background: #8e488e;
                 color: #fff;
-                margin-top: 10px;
+                
             }
         } 
     } 
@@ -76,7 +148,7 @@ body{background: #f1f5f6; font-size: 14px; font-family: "微软雅黑";}
         .badge{
             background: #fff;
             color: #333;
-            margin-top: 10px;
+          
         }
     }
 }
