--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -1,13 +1,15 @@
 body,html,*{border: none;margin: 0;padding: 0;}
 body{font-family: "微软雅黑";font-size: 14px;}
 ul{list-style: none;}
+a{text-decoration: none;}
 .box{
-    width: 100vw;;
+    width: 100vw;
+   
     //头部
     .header{
-        width: 100vw; height: 7vh;text-align: center;line-height: 7vh;color: #fff; background: #8e488e;position: fixed;top: 0;left: 0;z-index: 50;
+        width: 100vw; height: 8vh;text-align: center;line-height: 8vh;color: #fff; background: #8e488e;position: fixed;top: 0;left: 0;z-index: 50;
         .search{
-          margin-left:80vw ;margin-top: -7vh;
+          margin-left:80vw ;margin-top: -8vh;
         }
     }
     
@@ -32,7 +34,7 @@ ul{list-style: none;}
             ul{
                 width: 100%;height: 100%;display: flex;flex-flow:row wrap ;
                 li{
-                    height: 15vh;flex: 1 1 45%;margin: 3px;
+                    height: 20vh;flex: 1 1 45%;margin: 3px;
                     img{
                         width: 100%;height: 100%;
                     }
@@ -45,7 +47,7 @@ ul{list-style: none;}
             ul{
                 width: 100%;height: 100%;display: flex;flex-flow:row wrap ;
                 li{
-                    height: 20vh;flex: 1 1 100%;margin: 3px;
+                    height: 30vh;flex: 1 1 100%;margin: 3px;
                     img{
                         width: 100%;height: 100%;
                     }
