--- a/app/css/goods_details.css
+++ b/app/css/goods_details.css
@@ -2,9 +2,9 @@ html, body { width: 100%; height: 100%; margin: 0; padding: 0; overflow-x: hidde
 
 ul, li { margin: 0; padding: 0; list-style: none; }
 
-.header a.icon-fanhui { color: white; font-size: 3vh; float: left; padding-top: 1.5vh; text-decoration: none; flex: 1; padding-left: 3vw; }
+.header a.icon-fanhui { color: white; font-size: 1em; text-decoration: none; flex: 1; padding-left: 3vw; height: 7vh; line-height: 7vh; text-align: left; }
 
-.header span.icon-liebiao { color: white; font-size: 3vh; float: right; padding-top: 1.5vh; margin-right: 5vw; }
+.header span.icon-liebiao { color: white; font-size: 1em; float: right; margin-right: 5vw; height: 7vh; line-height: 7vh; }
 
 .header .btn { height: 7vh; text-align: center; line-height: 7vh; flex: 4; display: flex; }
 
@@ -12,7 +12,7 @@ ul, li { margin: 0; padding: 0; list-style: none; }
 
 .header .btn .atver { background: white; color: black; }
 
-header { display: flex; position: relative; background: #8e488e; color: #fff; font-size: 16px; font-weight: 600; justify-content: center; align-items: center; }
+header { position: fixed; display: flex; width: 100vw; background: #8e488e; color: #fff; font-size: 16px; font-weight: 600; justify-content: center; align-items: center; z-index: 10; height: 7vh; }
 
 header .navLsit { position: relative; flex: 1; text-align: right; }
 
@@ -68,6 +68,6 @@ section { margin-top: 8vh; width: 200vw; overflow: hidden; padding: 0; transitio
 
 .footer a.iconfont span { display: block; width: 5vw; height: 5vw; position: absolute; background: #8e488e; top: 1vh; left: 16vw; text-align: center; line-height: 5vw; border-radius: 50%; font-weight: 600; color: white; font-size: 14px; }
 
-.footer a.s_cart { width: 35vw; background: orangered; color: white; }
+.footer a.s_cart { width: 35vw; background: deeppink; color: white; }
 
 .footer a.buy { width: 35vw; background: #8e488e; color: white; }
