--- a/app/css/shoppingcart.css
+++ b/app/css/shoppingcart.css
@@ -48,7 +48,7 @@ section .goods_list li p .iconfont { float: right; border: none; background: whi
 
 .footer { width: 100%; height: 40px; position: fixed; bottom: 0; background: #8e488e; font-weight: 600; }
 
-.footer a { text-decoration: none; float: left; height: 40px; line-height: 40px; text-align: center; font-size: 16px; }
+.footer a { text-decoration: none; float: left; height: 40px; line-height: 40px; text-align: center; font-size: 1em; }
 
 .footer label { float: left; width: 30vw; height: 40px; background: white; color: #333333; position: relative; text-align: center; line-height: 40px; }
 
