--- a/app/sass/goods_details.scss
+++ b/app/sass/goods_details.scss
@@ -1,19 +1,22 @@
 html,body{width: 100%;height: 100%; margin: 0;padding: 0;overflow-x: hidden;}
 ul,li{margin: 0;padding: 0;list-style: none;}
-.header a.icon-fanhui{color: white;font-size: 3vh;float: left; padding-top:1.5vh ;text-decoration: none; flex: 1; padding-left: 3vw;}
-.header span.icon-liebiao{color: white;font-size: 3vh;float: right; padding-top:1.5vh ;margin-right: 5vw;}
+.header a.icon-fanhui{color: white;font-size: 1em;text-decoration: none; flex: 1; padding-left: 3vw;height: 7vh;line-height: 7vh;text-align: left;}
+.header span.icon-liebiao{color: white;font-size: 1em;float: right; margin-right: 5vw;height: 7vh;line-height: 7vh; }
 .header .btn{height: 7vh;text-align: center;line-height: 7vh;flex: 4;display: flex;}
 .header .btn a{float: left;width: 15vw;height: 7vh;color: white;text-decoration: none;font-size: 2vh;margin-right: 1vw;flex: 1;}
 .header .btn .atver{background: white;color: black;}
 header{
+    position: fixed;
     display: flex;
-    position: relative;
+    width: 100vw;
      background:#8e488e;
      color: #fff;
      font-size: 16px;
      font-weight: 600;
      justify-content: center;
      align-items: center; 
+     z-index: 10;
+     height: 7vh;
         
     .navLsit{
          position: relative;
@@ -85,5 +88,5 @@ section{margin-top: 8vh;width: 200vw;overflow: hidden;padding: 0;transition: all
 .footer a{text-decoration: none;float: left;height: 7vh; line-height:7vh;text-align: center;font-size: 3vh;}
 .footer a.iconfont{width: 30vw;background: white;color: #333333;position: relative;font-size: 4vh;}
 .footer a.iconfont span{display: block; width:5vw;height:5vw;position: absolute;background:#8e488e;top: 1vh;left: 16vw;text-align: center;line-height: 5vw;border-radius:50%;font-weight: 600;color:white;font-size: 14px;}
-.footer a.s_cart{width: 35vw;background: orangered;color: white;}
+.footer a.s_cart{width: 35vw;background: deeppink;color: white;}
 .footer a.buy{width:35vw;background: #8e488e;color: white;}
