--- a/app/sass/shoppingcart.scss
+++ b/app/sass/shoppingcart.scss
@@ -88,7 +88,7 @@ section .goods_list li p .number input{width: 20px;height: 15px;text-align: cent
 section .goods_list li p .number button{border: 1px solid darkgray;}
 section .goods_list li p .iconfont{float: right;border: none;background: white;margin-top: 8px;}
 .footer{width: 100%;height: 40px;position: fixed;bottom: 0;background:#8e488e;font-weight: 600;}
-.footer a{text-decoration: none;float: left;height: 40px; line-height:40px;text-align: center;font-size: 16px;}
+.footer a{text-decoration: none;float: left;height: 40px; line-height:40px;text-align: center;font-size: 1em;}
 .footer label{float: left; width: 30vw;height: 40px; background: white;color: #333333;position: relative;text-align: center;line-height: 40px;}
 .footer a.pay_way{width: 35vw;background: orangered;color: white;}
 .footer a.buy{width:35vw;background:#8e488e;color: white;}
