--- a/app/css/perfect.css
+++ b/app/css/perfect.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 /*列表页样式*/
-body, html { list-style: none; width: 100vw; height: auto; margin: 0 auto; padding: 0; }
+body, html { list-style: none; height: auto; margin: 0 auto; padding: 0; }
 
 ul { list-style: none; height: auto; margin: 0; padding: 0; }
 
-section { /*头部大框架*/ height: auto; }
+section { /*头部大框架*/ height: auto; width: 95vw; overflow: hidden; }
 
-section article { /*内容*/ padding-top: 13vh; width: 100vw; height: 400px; padding-left: 9%; padding-right: 10%; }
+section article { /*内容*/ padding-top: 13vh; width: 90vw; height: 400px; margin-left: 9%; }
 
 section article p { margin: 0; padding: 0; }
 
