--- a/app/sass/perfect.scss
+++ b/app/sass/perfect.scss
@@ -2,7 +2,6 @@
 /*列表页样式*/
 body,html{
     list-style: none;
-    width: 100vw;
     height: auto;
     margin: 0 auto;
     padding: 0;
@@ -15,12 +14,13 @@ ul{
 }
 section{  /*头部大框架*/
     height: auto; 
+    width: 95vw;
+    overflow: hidden;
     article{ /*内容*/
         padding-top: 13vh;
-        width: 100vw;
+        width: 90vw;
         height: 400px;
-        padding-left: 9%;
-        padding-right: 10%;           
+        margin-left: 9%;          
         p{
             margin: 0;
             padding: 0;
@@ -97,7 +97,6 @@ section{  /*头部大框架*/
             }         
         }
       }
-
         hgroup.address{ /*收货地址*/
             width: 100vw;
             height: 170px;
@@ -152,14 +151,12 @@ section{  /*头部大框架*/
                 }
                 input#txt{ /*具体地址*/
                     border-bottom: none;
-                    height: 58px;                        
-                    
+                    height: 58px;                                          
                 }
                 :nth-child(1){
                     border-top: none;
                     border-left: none;                    
-                } 
-            
+                }            
             }      
         }
         .btn{/*提交按钮*/
@@ -172,7 +169,6 @@ section{  /*头部大框架*/
             border: none;    
             cursor: pointer;        
         }
-
     footer{ /*底部列表当前高亮*/     
        .active{
             #homeicon5{
